# Food-Directions

./: README.md
client/: package-lock.json  package.json
client/src/: App.css  App.tsx
client/src/services/: services.ts
server/: app.py  pyproject.toml
server/src/: agents.py  create_descriptions.py  db_setup.py  descriptions.json  generate_directions.py  inject_to_vdb.py  restaurants.json  search.py  services.py  tx_cities.json
